Primera version de la portada

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
 -->
 
 
-<hr />
+<img class='img-responsive' src="galleries/Cover.png" >
 <center>
 <h1>
     <b>Workshop</b>
@@ -21,8 +21,22 @@
     Impulsando la vinculación
     Institutos-Universidades-Empresas
 </h2>
+
+<div class="row">
+    <div class="md-2">
+        <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" >
+    </div>
+    <div class="md-2">
+        <img class='img-responsive' src="galleries/Logo_UIBCDF.png" style="width:20%;">
+    </div>
+</div>
+
+
 </center>
 
+<hr />
+<hr />
+<hr />
 <hr />
 
 
