--- a/galleries/index.html
+++ b/galleries/index.html
@@ -88,6 +88,22 @@
 </ul></nav><h1>galleries</h1>
 
 <div id="gallery_container"></div>
+<noscript>
+<ul class="thumbnails">
+<li>
+<a href="Cover.png" class="thumbnail image-reference" title="Cover">
+            <img src="Cover.thumbnail.png" alt="Cover"></a>
+        </li>
+<li>
+<a href="Logo_UIBCDF.png" class="thumbnail image-reference" title="Logo uibcdf">
+            <img src="Logo_UIBCDF.thumbnail.png" alt="Logo uibcdf"></a>
+        </li>
+<li>
+<a href="Logo_HIMFG.jpg" class="thumbnail image-reference" title="Logo himfg">
+            <img src="Logo_HIMFG.thumbnail.jpg" alt="Logo himfg"></a>
+</li>
+</ul>
+</noscript>
 
         </div>
         <!--End of body content-->
@@ -104,7 +120,7 @@
     moment.locale("es");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [];
+jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
