Nikola auto commit.
Source commit: da7e81e719820bfd9a60c40ddbf20a1bb6dcb880
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <b>¡Registrate ya!</b><br>
 </h1>
 <h3>
-    La asistencia es libre y gratuita.
+    La asistencia es gratuita.
 </h3>
 </a>
 </div>
