Nikola auto commit.
Source commit: da7e81e719820bfd9a60c40ddbf20a1bb6dcb880
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -136,10 +136,16 @@
             </h2>
             <hr></a>
         <a href="blog/workshop-directo-streaming/">
-            <h4>
+            <h4 style="text-align:justify;">
                 El workshop se podrá seguir en directo por streaming gracias a CEMESATEL
             </h4>
         </a>
+        <a href="blog/preguntas-twitter/">
+            <h4 style="text-align:justify;">
+                Haz uso del hashtag #d3mexico para intervenir desde tu laboratorio
+            </h4>
+        </a>
+
 
     </div>
     <div class="col-md-6" style="min-height: 700px;">
