Nikola auto commit.
Source commit: da7e81e719820bfd9a60c40ddbf20a1bb6dcb880
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </a>
         <a href="blog/preguntas-twitter/">
             <h4 style="text-align:justify;">
-                Haz uso del hashtag #d3mexico para intervenir desde tu laboratorio
+                Toma el micrófono desde tu laboratorio haciendo uso del hashtag #d3mexico
             </h4>
         </a>
 
