--- a/contacto/index.html
+++ b/contacto/index.html
@@ -46,31 +46,11 @@
         </div>
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
-            <ul class="nav navbar-nav">
-<li>
+            <ul class="nav navbar-nav"><li>
 <a href="../objetivos/">Objetivos</a>
-                </li>
-<li>
-<a href="../invitados/">Invitados</a>
-                </li>
-<li>
-<a href="../programa/">Programa</a>
-                </li>
-<li>
-<a href="../registro/">Registro</a>
-                </li>
-<li>
-<a href="../blog/">Blog</a>
-                </li>
-<li>
-<a href="../como_llegar/">Cómo llegar</a>
-                </li>
-<li class="active">
-<a href=".">Contacto <span class="sr-only">(activo)</span></a>
 
                 
-            </li>
-</ul>
+            </li></ul>
 <ul class="nav navbar-nav navbar-right"></ul>
 </div>
 <!-- /.navbar-collapse -->
