--- a/pages/invitados.html
+++ b/pages/invitados.html
@@ -2,12 +2,12 @@
      .. title: Invitados
      .. slug: invitados
      .. date: 2018-01-19 19:19:17 UTC-06:00
-     .. tags: 
-     .. category: 
-     .. link: 
-     .. description: 
+     .. tags:
+     .. category:
+     .. link:
+     .. description:
      .. type:
-     .. hidetitle: True 
+     .. hidetitle: True
 -->
 
 
@@ -16,10 +16,207 @@
 <h1>
     <b>Invitados</b>
 </h1>
-<h2>
-    Semblanzas
-</h2>
+<h5>
+En orden de aparición
+</h5>
 </center>
+
+<div class="container">
+    <div class="panel panel-default">
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. Rachid Charbel Maroun </h3>
+                            <h5> Université Evry Val d'Essone (París, Francia).</h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. Lenin Domínguez </h3>
+                            <h5> UDLAP.</h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dra. Karina Mayoral Mayorga </h3>
+                            <h5> UNAM.</h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dra. Nina Pastor Colón </h3>
+                            <h5> UAEM.</h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. José Luis Medina Franco </h3>
+                            <h5> UNAM.</h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. Raúl Medina Pacheco </h3>
+                            <h5> MALVERN (Londres, Inglaterra)</h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. Juan Pablo Senosiain </h3>
+                            <h5> SENOSIAIN </h5>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
+                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
+
+
+
+
+    </div>
+</div>
+
+
 
 <hr />
 
