--- a/pages/programa.html
+++ b/pages/programa.html
@@ -16,6 +16,133 @@
 <h1>
     <b>Programa</b>
 </h1>
+
+<hr>
+
+
+
+
+
+<div class="table-responsive">
+
+  <table class="table table-striped">
+    <tbody>
+
+      <tr>
+        <td>8.30-9.30</td>
+        <td>Apertura</td>
+        <td><strong>Bienvenida</strong><br />
+            Dr. Diego Prada Gracia.<br />
+            Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br />
+            Hospital Infantil de México Federico Gómez</td>
+      </tr>
+
+      <tr>
+        <td>9.30-10.15</td>
+        <td>Conferencia Invitada</td>
+        <td><strong>TBA.</strong><br />
+            Dr. Rachid Charbel Maroun. <br />
+            Université Evry Val d'Essonne (París, Francia)</td>
+      </tr>
+
+      <tr>
+        <td>10.25-11.10</td>
+        <td>Conferencia 1</td>
+        <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
+            Dr. Lenin Domínguez, UDLAP.</td>
+      </tr>
+
+      <tr>
+        <td>11.10-11.30</td>
+        <td>Receso para el café</td>
+        <td></td>
+      </tr>
+
+      <tr>
+        <td>11.30-12.15</td>
+        <td>Conferencia 2</td>
+        <td><strong>Toxicología computacional en el ámbito regulatorio.</strong><br />
+            Dra. Karina Martinez Mayorga, UNAM.</td>
+      </tr>
+
+      <tr>
+        <td>12.25-13.10</td>
+        <td>Conferencia 3</td>
+        <td><strong>La proteína de unión a cajas TATA (TBP) como blanco para atacar parásitos y vectores deteniendo la transcripción.</strong><br />
+            Nina Pastor Colón, UAEM.</td>
+      </tr>
+
+      <tr>
+        <td>13.10-14.40</td>
+        <td>Comida</td>
+        <td></td>
+      </tr>
+
+      <tr>
+        <td>14.45-15.30</td>
+        <td>Conferencia 4</td>
+        <td><strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br />
+            Dr. José Luis Medina Franco. UNAM.</td>
+      </tr>
+      
+      <tr>
+        <td>15.40-16.25</td>
+        <td>Conferencia 5</td>
+        <td><strong>TBA.</strong><br />
+            Raúl Medina Pacheco, MALVERN (Londres, Inglaterra)</td>
+      </tr>
+
+      <tr>
+          <td>16.35-17.35</td>
+        <td>Coloquio 1</td>
+        <td>Fundación INCIDE. (por confirmar)<br />
+            Fundación FUNSALUD. (por confirmar)<br />
+            Fundación Gonzalo Río Arronte (por confirmar)</td>
+      </tr>
+
+      <tr>
+        <td>17.45-18.45</td>
+        <td>Coloquio 2</td>
+        <td>Silanes (por confirmar)<br />
+            Liomont (por confirmar)<br />
+            Carnot (por confirmar)<br />
+            Merck (por confirmar)<br />
+            Dr. Juan Pablo Senosiain, SENOSIAIN.</td>
+      </tr>
+
+      <tr>
+        <td>18.55-19.55</td>
+        <td>Mesa Redonda</td>
+        <td>Debate, conclusiones y clausura.<br />
+            (presentación de Workshop Slack D3 y Meetups D3)</td>
+      </tr>
+
+      <tr>
+        <td>20.00-22.30</td>
+        <td>Evento Social</td>
+        <td>Socialización en bar o restaurante</td>
+      </tr>
+
+
+
+
+    </tbody>
+  </table>
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
 </center>
 
 <hr />
