--- a/pages/index.html
+++ b/pages/index.html
@@ -22,22 +22,68 @@
     Institutos-Universidades-Empresas
 </h2>
 
+
+<hr />
+<p> Fecha: 12 de Abril de 2018 </p>
+<p> Lugar: Hospital Infantil de México Federico Gómez. Calle Dr. Márquez 162, Delegación Cuauhtémoc. 
+06720, Ciudad de México, México. </p>
+<hr />
+
+<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
+<a href="/registro/">
+<h1>
+    <b>¡Registrate ya!</b><br />
+</h1>
+<h3>
+    La asistencia es gratuita.
+</h3>
+</a>
+</div>
+
 <div class="row">
-    <div class="md-2">
-        <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" >
+    <div class="md-2" style="margin-top: 4em; margin-bottom: 4em;">
+        <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" style="width:30%;">
     </div>
     <div class="md-2">
-        <img class='img-responsive' src="galleries/Logo_UIBCDF.png" style="width:20%;">
+        <img class='img-responsive' src="galleries/Logo_UIBCDF.png" style="width:30%;">
     </div>
 </div>
 
 
-</center>
+<div class="row" style="margin-top: 10em; margin-bottom: 2em;">
+    <div class="col-md-6" style="min-height: 700px;">
+        <!-- <iframe src="/blog?layout=embedded" style=".nav { display: none!important;}" frameborder="0" width="500" height="700"></iframe> -->
 
-<hr />
-<hr />
-<hr />
-<hr />
+        <a href="/blog/">
+            <h2>
+                <b>Blog</b>
+            </h2>
+            <hr />
+        </a>
+        <a href="/blog/workshop-directo-streaming/">
+            <h4 style="text-align:justify;">
+                El workshop se podrá seguir en directo por streaming gracias a CEMESATEL
+            </h4>
+        </a>
+        <a href="/blog/preguntas-twitter/">
+            <h4 style="text-align:justify;">
+                Toma el micrófono desde tu laboratorio haciendo uso del hashtag #d3mexico
+            </h4>
+        </a>
+
+
+    </div>
+    <div class="col-md-6" style="min-height: 700px;">
+                    <a class="twitter-timeline"  href="https://twitter.com/hashtag/d3mexico" data-widget-id="956918407382945797">#d3mexico Tweets</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+</div>
+
+
+
+</center>
 
 
 
