--- a/pages/objetivos.html
+++ b/pages/objetivos.html
@@ -14,9 +14,70 @@
 <hr />
 <center>
 <h1>
+    <b>Motivación</b>
+</h1>
+
+
+<div class="container" style="margin-top: 2em;">
+    <div class="jumbotron col-md-12">
+        <center>
+
+            <p style="text-align:justify;font-size:16px">La propuesta de taller “Drug Design and Discovery México: Impulsando la vinculación Institutos-Universidad-Empresas” surge en un momento en el que desde la Secretaría de Salud, en colaboración con varias instituciones públicas y privadas, se pretende impulsar la translación de ciencia hacia la sociedad y la industria para la resolución de problemas biomédicos. Por el momento estas iniciativas se han centrado recientemente en la búsqueda de proyectos científicos ya realizados y próximos a su posible traslación; Por lo tanto, es oportuno preveer que en un futuro cercano comenzarán a aplicarse estrategias coordinadas para actuar desde las raíces del eje ciencia básica–sociedad. En esta coyuntura nace este taller.</p>
+
+            <p style="text-align:justify;font-size:16px">El programa ha sido diseñado con la aspiración de ser el esqueleto que estructure un espacio de encuentro entre investigadores de institutos, universidades, fundaciones y empresas, en el que catalizar la generación del debate científico-técnico en la búsqueda de estrategias que nutran dinámicas orientadas a fortalecer y acelerar el diseño y descubrimiento de ligandos de interés social en instituciones públicas e industria; desde las etapas más tempranas de un proyecto, la colaboración en prestación de servicios o formación de recursos humanos, hasta la cooperación en la búsqueda de objetivos y mecanismos para su consecución.</p>
+
+            <p style="text-align:justify;font-size:16px">A lo largo de este encuentro, además de presentar conferencias de contenido científico cuya finalidad última es servir de pretexto para que las distintas partes conozcan las habilidades y proyectos de los laboratorios participantes, se motivarán los coloquios y mesas redondas en las que se tratará de manera colectiva de buscar respuestas a preguntas del tipo:¿Qué dinámicas de colaboración se pueden establecer con la industria?, ¿Cómo podemos relacionarnos para orientar y acelerar el diseño y descubrimiento de fármacos en México?, ¿Qué problemas tenemos como comunidad y qué estrategias resolución podríamos abordar en común?, ¿Qué tipo de proyectos es pertinente desarrollar en México con la perspectiva de ser trasladados?, ¿Qué tipo de servicios necesitaría la industria farmacéutica mexicana?, ¿Qué mecanismos de financiación alternos se podrían poner en marcha?, ¿Qué perfiles profesionales de pre y posgrado necesitan desarrollarse desde las universidades e institutos que aporten valor a las empresas interesadas en el diseño racional de ligandos con potencial biotecnológico?...</p>
+
+        </center>
+    </div>
+</div>
+
+
+<hr />
+<center>
+<h1>
     <b>Objetivos</b>
 </h1>
+
+
+<div class="container" style="margin-top: 2em;">
+    <div class="jumbotron col-md-12">
+        <center>
+            <ul>
+            <li style="text-align:justify;font-size:16px"> Generar las condiciones propicias para desencadenar la interacción de agentes activos en el campo del diseño y descubrimiento de moléculas con potencial farmacológico desde Institutos Nacionales de Salud, Universidades y Empresas:</li>
+            <ul>
+                <li style="text-align:justify;font-size:16px">Dar a conocer los proyectos, habilidades e infraestructura de los laboratorios más relevantes en este campo pertenecientes a institutos y universidades.</li>
+                <li style="text-align:justify;font-size:16px">Conocer la identidad, posibles puntos de interés común y mecanismos de colaboración de empresas mexicanas del sector farmacéutico.</li>
+                <li style="text-align:justify;font-size:16px">Comprender los intereses y enfoques de trabajo de fundaciones que pueden apoyar iniciativas de investigación en este campo. Darles a conocer nuestro trabajo, nuestras dinámicas y necesidades, así como nuestros posibles resultados.</li>
+            </ul>
+            </ul>
+
+            <ul>
+            <li style="text-align:justify;font-size:16px">Fomentar un ámbito de networking en el que pueda cristalizar un sentimiento de identidad como comunidad de investigadores en el campo, que comience a detectar y resolver problemas de manera colectiva.</li>
+            </ul>
+
+            <ul>
+            <li style="text-align:justify;font-size:16px">Comenzar a diseñar junto con la industria mecanismos para el desarrollo de estrategias conjuntas que puedan desembocar en el fortalecimiento del campo:</li>
+            <ul>
+	                <li style="text-align:justify;font-size:16px">Tipos de colaboración.</li>
+                  <li style="text-align:justify;font-size:16px">Dinámicas apadrinadas por la industria para el desarrollo científico y de recursos humanos y materiales (ej: SAMPL, D3R, Open Science Fellowship).</li>
+                  <li style="text-align:justify;font-size:16px">Cooperación en la resolución de problemas comunes, diseño de estrategias públicas de solución y colaboración en la comunicación a gestores públicos (ej: necesidades computacionales, políticas de registro, plataformas como Open Source Drug Design, auspiciada por el gobierno indio, o el ejemplo de la campaña de impulso del gobierno chino)</li>
+            </ul>
+            </ul>
+
+            <ul>
+                <li style="text-align:justify;font-size:16px">Presentar a la comunidad las herramientas impulsadas desde la Unidad de Investigación en Biología Computacional y Diseño de Fármacos para el fomento de la búsqueda de identidad colectiva y resolución de problemas comunes: Workspace de Slack “D3 México (Drug Design and Discovery)” y MeetUps “D3 México”.</li>
+            </ul>
+
+        </center>
+    </div>
+</div>
+
+
 </center>
+
+
+
 
 <hr />
 
