--- a/pages/registro.html
+++ b/pages/registro.html
@@ -12,14 +12,8 @@
 
 
 <hr />
-<center>
-<h1>
-    <b>Registro</b>
-</h1>
-<h2>
-    Google Form
-</h2>
-</center>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdZF8LggLAxeEN0onkRaOWuBCIpHi9Hw6FivJsr9P2rSpBN_w/viewform?embedded=true" width="100%" height="1600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 <hr />
 
