Nikola auto commit.
Source commit: dacff44a9c158abc402809089e3208b6bff7ac91
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -52,11 +52,31 @@
         </div>
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
-            <ul class="nav navbar-nav"><li>
+            <ul class="nav navbar-nav">
+<li>
 <a href="objetivos/">Objetivos</a>
+                </li>
+<li>
+<a href="invitados/">Invitados</a>
+                </li>
+<li>
+<a href="programa/">Programa</a>
+                </li>
+<li>
+<a href="registro/">Registro</a>
+                </li>
+<li>
+<a href="blog/">Blog</a>
+                </li>
+<li>
+<a href="como_llegar/">Cómo llegar</a>
+                </li>
+<li>
+<a href="contacto/">Contacto</a>
 
                 
-            </li></ul>
+            </li>
+</ul>
 <ul class="nav navbar-nav navbar-right"></ul>
 </div>
 <!-- /.navbar-collapse -->
@@ -85,9 +105,55 @@
 <p> Lugar: Hospital Infantil de México Federico Gómez. Calle Dr. Márquez 162, Delegación Cuauhtémoc. 
 06720, Ciudad de México, México. </p>
 <hr>
+<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
+<a href="registro/">
 <h1>
-    <b>¡Próximamente!</b><br>
+    <b>¡Registrate ya!</b><br>
 </h1>
+<h3>
+    La asistencia es gratuita.
+</h3>
+</a>
+</div>
+
+<div class="row">
+    <div class="md-2" style="margin-top: 4em; margin-bottom: 4em;">
+        <img class="img-responsive" src="galleries/Logo_HIMFG.jpg" style="width:30%;">
+</div>
+    <div class="md-2">
+        <img class="img-responsive" src="galleries/Logo_UIBCDF.png" style="width:30%;">
+</div>
+</div>
+
+
+<div class="row" style="margin-top: 10em; margin-bottom: 2em;">
+    <div class="col-md-6" style="min-height: 700px;">
+        <!-- <iframe src="/blog?layout=embedded" style=".nav { display: none!important;}" frameborder="0" width="500" height="700"></iframe> -->
+
+        <a href="blog/">
+            <h2>
+                <b>Blog</b>
+            </h2>
+            <hr></a>
+        <a href="blog/workshop-directo-streaming/">
+            <h4 style="text-align:justify;">
+                El workshop se podrá seguir en directo por streaming gracias a CEMESATEL
+            </h4>
+        </a>
+        <a href="blog/preguntas-twitter/">
+            <h4 style="text-align:justify;">
+                Toma el micrófono desde tu laboratorio haciendo uso del hashtag #d3mexico
+            </h4>
+        </a>
+
+
+    </div>
+    <div class="col-md-6" style="min-height: 700px;">
+                    <a class="twitter-timeline" href="https://twitter.com/hashtag/d3mexico" data-widget-id="956918407382945797">#d3mexico Tweets</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+</div>
+
 
 
 </center>
