--- a/invitados/index.html
+++ b/invitados/index.html
@@ -58,11 +58,31 @@ En orden de aparición
         </div>
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
-            <ul class="nav navbar-nav"><li>
+            <ul class="nav navbar-nav">
+<li>
 <a href="../objetivos/">Objetivos</a>
+                </li>
+<li class="active">
+<a href=".">Invitados <span class="sr-only">(activo)</span></a>
+                </li>
+<li>
+<a href="../programa/">Programa</a>
+                </li>
+<li>
+<a href="../registro/">Registro</a>
+                </li>
+<li>
+<a href="../blog/">Blog</a>
+                </li>
+<li>
+<a href="../como_llegar/">Cómo llegar</a>
+                </li>
+<li>
+<a href="../contacto/">Contacto</a>
 
                 
-            </li></ul>
+            </li>
+</ul>
 <ul class="nav navbar-nav navbar-right"></ul>
 </div>
 <!-- /.navbar-collapse -->
@@ -104,10 +124,6 @@ En orden de aparición
                         <center>
                             <h3> Dr. Rachid Charbel Maroun </h3>
                             <h5> Université Evry Val d'Essone (París, Francia).</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                         </center>
                     </div>
                 </div>
@@ -128,71 +144,13 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Lenin Domínguez </h3>
+                            <h3> Dr. Lenin Domínguez Ramírez </h3>
                             <h5> UDLAP.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                         </center>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="panel-body" style="height: 236px;">
-            <div class="col-md-3">
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <img src="../images/icon_person.png" style="height:180px;">
-</center>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <h3> Dra. Karina Mayoral Mayorga </h3>
-                            <h5> UNAM.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-                        </center>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="panel-body" style="height: 236px;">
-            <div class="col-md-3">
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <img src="../images/icon_person.png" style="height:180px;">
-</center>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <h3> Dra. Nina Pastor Colón </h3>
-                            <h5> UAEM.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-                        </center>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
         <div class="panel-body" style="height: 236px;">
             <div class="col-md-3">
@@ -210,10 +168,50 @@ En orden de aparición
                         <center>
                             <h3> Dr. José Luis Medina Franco </h3>
                             <h5> UNAM.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="../images/icon_person.png" style="height:180px;">
+</center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dra. Nina Pastor Colón </h3>
+                            <h5> UAEM.</h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="../images/icon_person.png" style="height:180px;">
+</center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dra. Karina Martínez Mayorga </h3>
+                            <h5> UNAM.</h5>
                         </center>
                     </div>
                 </div>
@@ -236,10 +234,6 @@ En orden de aparición
                         <center>
                             <h3> Dr. Raúl Medina Pacheco </h3>
                             <h5> MALVERN (Londres, Inglaterra)</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                         </center>
                     </div>
                 </div>
@@ -260,19 +254,59 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Juan Pablo Senosiain </h3>
-                            <h5> SENOSIAIN </h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                            <h3> Dr. Juan Pablo Senosiain Peláez</h3>
+                            <h5> Laboratorios SENOSIAIN </h5>
                         </center>
                     </div>
                 </div>
             </div>
         </div>
 
-        
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="../images/icon_person.png" style="height:180px;">
+</center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. Jorge González Canudas</h3>
+                            <h5> Laboratorios SILANES </h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="../images/icon_person.png" style="height:180px;">
+</center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Pendiente de confirmación </h3>
+                            <h5> ... </h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
