--- a/pages/invitados.html
+++ b/pages/invitados.html
@@ -40,10 +40,6 @@ En orden de aparición
                         <center>
                             <h3> Dr. Rachid Charbel Maroun </h3>
                             <h5> Université Evry Val d'Essone (París, Francia).</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                         </center>
                     </div>
                 </div>
@@ -64,71 +60,13 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Lenin Domínguez </h3>
+                            <h3> Dr. Lenin Domínguez Ramírez </h3>
                             <h5> UDLAP.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                         </center>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="panel-body" style="height: 236px;">
-            <div class="col-md-3" >
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
-                        </center>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-9" >
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <h3> Dra. Karina Mayoral Mayorga </h3>
-                            <h5> UNAM.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-                        </center>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="panel-body" style="height: 236px;">
-            <div class="col-md-3" >
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
-                        </center>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-9" >
-                <div class="panel panel-default" style="height: 210px;">
-                    <div class="panel-body">
-                        <center>
-                            <h3> Dra. Nina Pastor Colón </h3>
-                            <h5> UAEM.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-                        </center>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
         <div class="panel-body" style="height: 236px;">
             <div class="col-md-3" >
@@ -146,10 +84,50 @@ En orden de aparición
                         <center>
                             <h3> Dr. José Luis Medina Franco </h3>
                             <h5> UNAM.</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dra. Nina Pastor Colón </h3>
+                            <h5> UAEM.</h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dra. Karina Martínez Mayorga </h3>
+                            <h5> UNAM.</h5>
                         </center>
                     </div>
                 </div>
@@ -172,10 +150,6 @@ En orden de aparición
                         <center>
                             <h3> Dr. Raúl Medina Pacheco </h3>
                             <h5> MALVERN (Londres, Inglaterra)</h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                         </center>
                     </div>
                 </div>
@@ -196,19 +170,59 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Juan Pablo Senosiain </h3>
-                            <h5> SENOSIAIN </h5>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX <br/>
-                            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                            <h3> Dr. Juan Pablo Senosiain Peláez</h3>
+                            <h5> Laboratorios SENOSIAIN </h5>
                         </center>
                     </div>
                 </div>
             </div>
         </div>
 
-        
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Dr. Jorge González Canudas</h3>
+                            <h5> Laboratorios SILANES </h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="/images/icon_person.png", style="height:180px;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9" >
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3> Pendiente de confirmación </h3>
+                            <h5> ... </h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
