--- a/pages/programa.html
+++ b/pages/programa.html
@@ -29,16 +29,16 @@
     <tbody>
 
       <tr>
-        <td>8.30-9.30</td>
+        <td>9.00-9.15</td>
         <td>Apertura</td>
-        <td><strong>Bienvenida</strong><br />
+        <td><strong>Apertura y bienvenida</strong><br />
             Dr. Diego Prada Gracia.<br />
             Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br />
             Hospital Infantil de México Federico Gómez</td>
       </tr>
 
       <tr>
-        <td>9.30-10.15</td>
+        <td>9.20-10.05</td>
         <td>Conferencia Invitada</td>
         <td><strong>TBA.</strong><br />
             Dr. Rachid Charbel Maroun. <br />
@@ -46,85 +46,93 @@
       </tr>
 
       <tr>
-        <td>10.25-11.10</td>
+        <td>10.10-10.55</td>
         <td>Conferencia 1</td>
         <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
             Dr. Lenin Domínguez, UDLAP.</td>
       </tr>
 
       <tr>
-        <td>11.10-11.30</td>
+        <td>11.00-11.20</td>
         <td>Receso para el café</td>
         <td></td>
       </tr>
 
       <tr>
-        <td>11.30-12.15</td>
+        <td>11.20-12.05</td>
         <td>Conferencia 2</td>
-        <td><strong>Toxicología computacional en el ámbito regulatorio.</strong><br />
-            Dra. Karina Martinez Mayorga, UNAM.</td>
-      </tr>
+        <td><strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br />
+            Dr. José Luis Medina Franco. UNAM.</td>
+     </tr>
 
       <tr>
-        <td>12.25-13.10</td>
+        <td>12.10-12.55</td>
         <td>Conferencia 3</td>
         <td><strong>La proteína de unión a cajas TATA (TBP) como blanco para atacar parásitos y vectores deteniendo la transcripción.</strong><br />
-            Nina Pastor Colón, UAEM.</td>
+            Dra. Nina Pastor Colón, UAEM.</td>
+
       </tr>
 
       <tr>
-        <td>13.10-14.40</td>
+        <td>12.50-14.20</td>
         <td>Comida</td>
         <td></td>
       </tr>
 
       <tr>
-        <td>14.45-15.30</td>
+        <td>14.20-15.05</td>
         <td>Conferencia 4</td>
-        <td><strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br />
-            Dr. José Luis Medina Franco. UNAM.</td>
+        <td><strong>Toxicología computacional en el ámbito regulatorio.</strong><br />
+            Dra. Karina Martínez Mayorga, UNAM.</td>
       </tr>
       
       <tr>
-        <td>15.40-16.25</td>
+        <td>15.10-15.55</td>
         <td>Conferencia 5</td>
-        <td><strong>TBA.</strong><br />
-            Raúl Medina Pacheco, MALVERN (Londres, Inglaterra)</td>
+        <td><strong>Microcalorimetry: A versatile tool for understanding biomolecular interactions and an aid to drug design.</strong><br />
+            Dr. Raúl Medina Pacheco, MALVERN (Londres, Inglaterra)</td>
       </tr>
 
       <tr>
-          <td>16.35-17.35</td>
-        <td>Coloquio 1</td>
-        <td>Fundación INCIDE. (por confirmar)<br />
-            Fundación FUNSALUD. (por confirmar)<br />
-            Fundación Gonzalo Río Arronte (por confirmar)</td>
+          <td>16.00-17.30</td>
+        <td>Coloquio</td>
+        <td>
+            <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
+            <br />
+            Participantes:<br />
+            Dr. Juan Pablo Senosiain, SENOSIAIN.<br />
+            Dr. Jorge González Canudas, SILANES.<br />
+            Otros laboratorios por confirmar.<br />
+            <br />
+        Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br />
+        - ¿Qué tipo de proyectos es pertinente desarrollar en México con la perspectiva de ser trasladados?<br />
+        - ¿Qué tipo de servicios de alto contenido tecnológico necesitaría la industria farmacéutica mexicana para incrementar su competitividad?<br />
+        - ¿Es posible diseñar y trasladar una nueva molécula en México?<br />
+        - ¿Qué perfiles profesionales de pre y posgrado necesitan desarrollarse desde las universidades e institutos que aporten valor a las empresas interesadas en el diseño y optimización de ligandos con potencial biotecnológico?<br />
+        - ¿Qué dinámicas de colaboración pueden establecer la universidad y los institutos de salud con la industria en el campo del diseño y optimización de ligandos con potencial biotecnológico?<br />
+        - ¿Qué mecanismos de apoyo y financiación alternos se podrían poner en marcha para apoyar la formación de profesionales y el desarrollo proyectos en universidades y institutos?<br />
+        </td>
       </tr>
 
       <tr>
-        <td>17.45-18.45</td>
-        <td>Coloquio 2</td>
-        <td>Silanes (por confirmar)<br />
-            Liomont (por confirmar)<br />
-            Carnot (por confirmar)<br />
-            Merck (por confirmar)<br />
-            Dr. Juan Pablo Senosiain, SENOSIAIN.</td>
+        <td>17.30-18.30</td>
+        <td>Turno de participación abierta</td>
+        <td>
+            <strong>Propuestas, conclusiones y clausura.</strong><br />
+            <br />
+        Durante el turno de participación abierta se procurarán abordar, entre otras, las siguientes cuestiones:<br />
+        - ¿Qué problemas tenemos como comunidad y qué estrategias de resolución podríamos abordar en común?<br />
+        - ¿Cómo podemos relacionarnos para orientar y acelerar el diseño y descubrimiento de fármacos en México?<br />
+        </td>
+
+
       </tr>
 
       <tr>
-        <td>18.55-19.55</td>
-        <td>Mesa Redonda</td>
-        <td>Debate, conclusiones y clausura.<br />
-            (presentación de Workshop Slack D3 y Meetups D3)</td>
+          <td>19.00-21.30</td>
+          <td>Evento Social</td>
+        <td>Socialización en bar o restaurante.</td>
       </tr>
-
-      <tr>
-        <td>20.00-22.30</td>
-        <td>Evento Social</td>
-        <td>Socialización en bar o restaurante</td>
-      </tr>
-
-
-
 
     </tbody>
   </table>
