--- a/programa/index.html
+++ b/programa/index.html
@@ -176,8 +176,8 @@
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br><br>
             Participantes:<br>
-            Dr. Juan Pablo Senosiain, SENOSIAIN.<br>
-            Dr. Jorge González Canudas, SILANES.<br>
+            Dr. Juan Pablo Senosiain, Laboratorios SENOSIAIN.<br>
+            Dr. Jorge González Canudas, Laboratorios SILANES.<br>
             Otros laboratorios por confirmar.<br><br>
         Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br>
         - ¿Qué tipo de proyectos es pertinente desarrollar en México con la perspectiva de ser trasladados?<br>
