--- a/pages/objetivos.html
+++ b/pages/objetivos.html
@@ -47,13 +47,9 @@
             <li style="text-align:justify;font-size:16px"> Generar las condiciones propicias para desencadenar la interacción de agentes activos en el campo del diseño y descubrimiento de moléculas con potencial farmacológico desde Institutos Nacionales de Salud, Universidades y Empresas:</li>
             <ul>
                 <li style="text-align:justify;font-size:16px">Dar a conocer los proyectos, habilidades e infraestructura de los laboratorios más relevantes en este campo pertenecientes a institutos y universidades.</li>
-                <li style="text-align:justify;font-size:16px">Conocer la identidad, posibles puntos de interés común y mecanismos de colaboración de empresas mexicanas del sector farmacéutico.</li>
-                <li style="text-align:justify;font-size:16px">Comprender los intereses y enfoques de trabajo de fundaciones que pueden apoyar iniciativas de investigación en este campo. Darles a conocer nuestro trabajo, nuestras dinámicas y necesidades, así como nuestros posibles resultados.</li>
+                <li style="text-align:justify;font-size:16px">Conocer los posibles puntos de interés común y mecanismos de colaboración con las empresas mexicanas del sector farmacéutico.</li>
+                <li style="text-align:justify;font-size:16px">Conocer los aspectos en los que los investigadores de institutos y universidades podrían contribuir a incrementar la competitividad de las empresas mexicanas.</li>
             </ul>
-            </ul>
-
-            <ul>
-            <li style="text-align:justify;font-size:16px">Fomentar un ámbito de networking en el que pueda cristalizar un sentimiento de identidad como comunidad de investigadores en el campo, que comience a detectar y resolver problemas de manera colectiva.</li>
             </ul>
 
             <ul>
@@ -61,12 +57,12 @@
             <ul>
 	                <li style="text-align:justify;font-size:16px">Tipos de colaboración.</li>
                   <li style="text-align:justify;font-size:16px">Dinámicas apadrinadas por la industria para el desarrollo científico y de recursos humanos y materiales (ej: SAMPL, D3R, Open Science Fellowship).</li>
-                  <li style="text-align:justify;font-size:16px">Cooperación en la resolución de problemas comunes, diseño de estrategias públicas de solución y colaboración en la comunicación a gestores públicos (ej: necesidades computacionales, políticas de registro, plataformas como Open Source Drug Design, auspiciada por el gobierno indio, o el ejemplo de la campaña de impulso del gobierno chino)</li>
+                  <li style="text-align:justify;font-size:16px">Cooperación en la resolución de problemas comunes, diseño de estrategias públicas de solución y colaboración en la comunicación a gestores públicos (ej: necesidades computacionales, políticas de registro, plataformas como Open Source Drug Design auspiciada por el gobierno indio, o el ejemplo de la campaña de impulso del gobierno chino)</li>
             </ul>
             </ul>
 
             <ul>
-                <li style="text-align:justify;font-size:16px">Presentar a la comunidad las herramientas impulsadas desde la Unidad de Investigación en Biología Computacional y Diseño de Fármacos para el fomento de la búsqueda de identidad colectiva y resolución de problemas comunes: Workspace de Slack “D3 México (Drug Design and Discovery)” y MeetUps “D3 México”.</li>
+                <li style="text-align:justify;font-size:16px">Fomentar un ámbito de networking en el que pueda cristalizar un sentimiento de comunidad e impulsar la articulación de herramientas para la resolución de problemas comunes y el fomento de una identidad colectiva: Workspace de Slack “D3 México (Drug Design and Discovery)”, MeetUps “D3 México” y red nacional temática.</li>
             </ul>
 
         </center>
