--- a/pages/programa.html
+++ b/pages/programa.html
@@ -100,8 +100,8 @@
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
             <br />
             Participantes:<br />
-            Dr. Juan Pablo Senosiain, SENOSIAIN.<br />
-            Dr. Jorge González Canudas, SILANES.<br />
+            Dr. Juan Pablo Senosiain, Laboratorios SENOSIAIN.<br />
+            Dr. Jorge González Canudas, Laboratorios SILANES.<br />
             Otros laboratorios por confirmar.<br />
             <br />
         Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br />
